<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInLayout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/welcome"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:text="@string/welcome"/>
    <EditText
        android:layout_width="200dp"
        android:hint="@string/login_or_email"
        android:textAlignment="center"
        android:textColorHint="@color/colorHint"
        android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
        android:id="@+id/login"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/password"
        android:textAlignment="center"
       android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/colorHint"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_below="@id/password"
        android:id="@+id/loginbutton"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="20dp"/>
</RelativeLayout>