<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Main2Activity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iptext"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:text="@string/enter_the_server_ip"
            android:textSize="25sp" />

        <EditText
            android:layout_width="150dp"
            android:id="@+id/ip1"
            android:layout_centerHorizontal="true"
            android:maxLength="11"
            android:hint="@string/null_if_server"
            android:layout_marginTop="24dp"
            android:layout_below="@id/iptext"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/gray"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/eport1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_below="@id/ip1"
            android:text="@string/eport"
            android:textSize="25sp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:id="@+id/port1"
            android:inputType="number"
            android:layout_marginTop="24dp"
            android:layout_below="@id/eport1"
            android:textAlignment="center"
            android:maxLength="4"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/port1"
            android:layout_marginTop="24dp"
            android:id="@+id/enick1"
            android:text="@string/nickname"
            android:textSize="25sp" />

        <EditText
            android:layout_width="150dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/nick1"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/enick1"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_below="@id/nick1"
            android:id="@+id/tcpgroup"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Server"
                android:id="@+id/server"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:id="@+id/client"
                android:textColor="@color/colorPrimary"
                android:text="Client"
                android:textSize="25sp" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connect1"
            android:text="@string/connect"
            android:layout_below="@id/tcpgroup"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/background_light"
            android:background="@color/colorPrimary"
            android:layout_marginTop="24dp" />

    </RelativeLayout>
</ScrollView>