<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:orientation="vertical"
    tools:context=".Main2Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enter"
            android:textAlignment="center"
            android:text="@string/enter_the_server_ip"
            android:textSize="25sp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="150dp"
            android:id="@+id/ip"
            android:layout_centerHorizontal="true"
            android:maxLength="11"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/eport"
            android:text="@string/eport"
            android:textSize="25sp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:id="@+id/port"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLength="4"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/enick"
            android:text="@string/nickname"
            android:textSize="25sp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="100dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/nick"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connect"
            android:text="@string/connect"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/background_light"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>
</LinearLayout>